vbnc/vbnc/tests/Errors/32105-1.vb

Class A
End Class

Class B(Of T As Structure)
    Function M() As b(Of A)
        Return Nothing
    End Function
End Class